# setok-dotnet/setok.webapi/Models/QRCodeDto.cs
@@ -1,0 +1,6 @@
+using QRCoder;
+
+public class QRCodeDto
+{
+    public string? Text { get; set; }
+}
